// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot 1`] = `
<div>
  <div
    class="rdp-calendar"
    id="test"
  >
    <div
      class="rdp-months"
    >
      <div
        class="rdp-nav"
        role="toolbar"
      >
        <button
          aria-controls="test"
          aria-label="Previous Month"
          class="rdp-button_previous"
          name="previous-month"
          type="button"
        >
          <svg
            class="rdp-chevron"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <polygon
              points="16 18.112 9.81111111 12 16 5.87733333 14.0888889 4 6 12 14.0888889 20"
            />
          </svg>
        </button>
        <button
          aria-controls="test"
          aria-label="Next Month"
          class="rdp-button_next"
          name="next-month"
          type="button"
        >
          <svg
            class="rdp-chevron"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <polygon
              points="8 18.612 14.1888889 12.5 8 6.37733333 9.91111111 4.5 18 12.5 9.91111111 20.5"
            />
          </svg>
        </button>
      </div>
      <div
        class="rdp-month_wrapper"
      >
        <div
          class="rdp-month_caption"
          id="test-caption-0"
        >
          <span
            aria-label=""
            aria-live="polite"
            class="rdp-caption_label"
            role="status"
          >
            June 2020
          </span>
        </div>
        <div
          aria-labelledby="test-caption-0"
          aria-multiselectable="true"
          class="rdp-month"
          id="test-grid-0"
          role="grid"
        >
          <div
            aria-rowindex="1"
            class="rdp-weekdays"
            role="row"
          >
            <span
              aria-colindex="1"
              aria-label="Sunday"
              class="rdp-weekday"
              role="columnheader"
            >
              Su
            </span>
            <span
              aria-colindex="2"
              aria-label="Monday"
              class="rdp-weekday"
              role="columnheader"
            >
              Mo
            </span>
            <span
              aria-colindex="3"
              aria-label="Tuesday"
              class="rdp-weekday"
              role="columnheader"
            >
              Tu
            </span>
            <span
              aria-colindex="4"
              aria-label="Wednesday"
              class="rdp-weekday"
              role="columnheader"
            >
              We
            </span>
            <span
              aria-colindex="5"
              aria-label="Thursday"
              class="rdp-weekday"
              role="columnheader"
            >
              Th
            </span>
            <span
              aria-colindex="6"
              aria-label="Friday"
              class="rdp-weekday"
              role="columnheader"
            >
              Fr
            </span>
            <span
              aria-colindex="7"
              aria-label="Saturday"
              class="rdp-weekday"
              role="columnheader"
            >
              Sa
            </span>
          </div>
          <div
            class="rdp-weeks"
            role="rowgroup"
          >
            <div
              aria-rowindex="2"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                aria-hidden="true"
                aria-label=""
                class="rdp-day rdp-hidden rdp-outside"
                data-day="2020-05-31"
                data-hidden="true"
                data-month="2020-05"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  31
                </span>
              </div>
              <div
                aria-colindex="2"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-01"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  1
                </span>
              </div>
              <div
                aria-colindex="3"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-02"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  2
                </span>
              </div>
              <div
                aria-colindex="4"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-03"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  3
                </span>
              </div>
              <div
                aria-colindex="5"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-04"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  4
                </span>
              </div>
              <div
                aria-colindex="6"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-05"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  5
                </span>
              </div>
              <div
                aria-colindex="7"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-06"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  6
                </span>
              </div>
            </div>
            <div
              aria-rowindex="3"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-07"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  7
                </span>
              </div>
              <div
                aria-colindex="2"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-08"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  8
                </span>
              </div>
              <div
                aria-colindex="3"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-09"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  9
                </span>
              </div>
              <div
                aria-colindex="4"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-10"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  10
                </span>
              </div>
              <div
                aria-colindex="5"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-11"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  11
                </span>
              </div>
              <div
                aria-colindex="6"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-12"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  12
                </span>
              </div>
              <div
                aria-colindex="7"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-13"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  13
                </span>
              </div>
            </div>
            <div
              aria-rowindex="4"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-14"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  14
                </span>
              </div>
              <div
                aria-colindex="2"
                aria-label=""
                aria-selected="true"
                class="rdp-day rdp-range_start rdp-selected"
                data-day="2020-06-15"
                data-month="2020-06"
                data-selected="true"
                role="gridcell"
                tabindex="0"
              >
                <span
                  class="rdp-day_date"
                >
                  15
                </span>
              </div>
              <div
                aria-colindex="3"
                aria-label=""
                aria-selected="true"
                class="rdp-day rdp-range_middle rdp-selected"
                data-day="2020-06-16"
                data-month="2020-06"
                data-selected="true"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  16
                </span>
              </div>
              <div
                aria-colindex="4"
                aria-label=""
                aria-selected="true"
                class="rdp-day rdp-range_middle rdp-selected"
                data-day="2020-06-17"
                data-month="2020-06"
                data-selected="true"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  17
                </span>
              </div>
              <div
                aria-colindex="5"
                aria-label=""
                aria-selected="true"
                class="rdp-day rdp-range_middle rdp-selected"
                data-day="2020-06-18"
                data-month="2020-06"
                data-selected="true"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  18
                </span>
              </div>
              <div
                aria-colindex="6"
                aria-label=""
                aria-selected="true"
                class="rdp-day rdp-range_end rdp-selected"
                data-day="2020-06-19"
                data-month="2020-06"
                data-selected="true"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  19
                </span>
              </div>
              <div
                aria-colindex="7"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-20"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  20
                </span>
              </div>
            </div>
            <div
              aria-rowindex="5"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-21"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  21
                </span>
              </div>
              <div
                aria-colindex="2"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-22"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  22
                </span>
              </div>
              <div
                aria-colindex="3"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-23"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  23
                </span>
              </div>
              <div
                aria-colindex="4"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-24"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  24
                </span>
              </div>
              <div
                aria-colindex="5"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-25"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  25
                </span>
              </div>
              <div
                aria-colindex="6"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-26"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  26
                </span>
              </div>
              <div
                aria-colindex="7"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-27"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  27
                </span>
              </div>
            </div>
            <div
              aria-rowindex="6"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-28"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  28
                </span>
              </div>
              <div
                aria-colindex="2"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-29"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  29
                </span>
              </div>
              <div
                aria-colindex="3"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-30"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  30
                </span>
              </div>
              <div
                aria-colindex="4"
                aria-hidden="true"
                aria-label=""
                class="rdp-day rdp-hidden rdp-outside"
                data-day="2020-07-01"
                data-hidden="true"
                data-month="2020-07"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  1
                </span>
              </div>
              <div
                aria-colindex="5"
                aria-hidden="true"
                aria-label=""
                class="rdp-day rdp-hidden rdp-outside"
                data-day="2020-07-02"
                data-hidden="true"
                data-month="2020-07"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  2
                </span>
              </div>
              <div
                aria-colindex="6"
                aria-hidden="true"
                aria-label=""
                class="rdp-day rdp-hidden rdp-outside"
                data-day="2020-07-03"
                data-hidden="true"
                data-month="2020-07"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  3
                </span>
              </div>
              <div
                aria-colindex="7"
                aria-hidden="true"
                aria-label=""
                class="rdp-day rdp-hidden rdp-outside"
                data-day="2020-07-04"
                data-hidden="true"
                data-month="2020-07"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  4
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rdp-footer"
    >
      <p>
        June 15th, 2020
        –
        June 19th, 2020
      </p>
    </div>
  </div>
</div>
`;

exports[`when a day in the range is clicked when the day is clicked again when a day in the range is clicked again should match the snapshot 1`] = `
<div>
  <div
    class="rdp-calendar"
    id="test"
  >
    <div
      class="rdp-months"
    >
      <div
        class="rdp-nav"
        role="toolbar"
      >
        <button
          aria-controls="test"
          aria-label="Previous Month"
          class="rdp-button_previous"
          name="previous-month"
          type="button"
        >
          <svg
            class="rdp-chevron"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <polygon
              points="16 18.112 9.81111111 12 16 5.87733333 14.0888889 4 6 12 14.0888889 20"
            />
          </svg>
        </button>
        <button
          aria-controls="test"
          aria-label="Next Month"
          class="rdp-button_next"
          name="next-month"
          type="button"
        >
          <svg
            class="rdp-chevron"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <polygon
              points="8 18.612 14.1888889 12.5 8 6.37733333 9.91111111 4.5 18 12.5 9.91111111 20.5"
            />
          </svg>
        </button>
      </div>
      <div
        class="rdp-month_wrapper"
      >
        <div
          class="rdp-month_caption"
          id="test-caption-0"
        >
          <span
            aria-label=""
            aria-live="polite"
            class="rdp-caption_label"
            role="status"
          >
            June 2020
          </span>
        </div>
        <div
          aria-labelledby="test-caption-0"
          aria-multiselectable="true"
          class="rdp-month"
          id="test-grid-0"
          role="grid"
        >
          <div
            aria-rowindex="1"
            class="rdp-weekdays"
            role="row"
          >
            <span
              aria-colindex="1"
              aria-label="Sunday"
              class="rdp-weekday"
              role="columnheader"
            >
              Su
            </span>
            <span
              aria-colindex="2"
              aria-label="Monday"
              class="rdp-weekday"
              role="columnheader"
            >
              Mo
            </span>
            <span
              aria-colindex="3"
              aria-label="Tuesday"
              class="rdp-weekday"
              role="columnheader"
            >
              Tu
            </span>
            <span
              aria-colindex="4"
              aria-label="Wednesday"
              class="rdp-weekday"
              role="columnheader"
            >
              We
            </span>
            <span
              aria-colindex="5"
              aria-label="Thursday"
              class="rdp-weekday"
              role="columnheader"
            >
              Th
            </span>
            <span
              aria-colindex="6"
              aria-label="Friday"
              class="rdp-weekday"
              role="columnheader"
            >
              Fr
            </span>
            <span
              aria-colindex="7"
              aria-label="Saturday"
              class="rdp-weekday"
              role="columnheader"
            >
              Sa
            </span>
          </div>
          <div
            class="rdp-weeks"
            role="rowgroup"
          >
            <div
              aria-rowindex="2"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                aria-hidden="true"
                aria-label=""
                class="rdp-day rdp-hidden rdp-outside"
                data-day="2020-05-31"
                data-hidden="true"
                data-month="2020-05"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  31
                </span>
              </div>
              <div
                aria-colindex="2"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-01"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  1
                </span>
              </div>
              <div
                aria-colindex="3"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-02"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  2
                </span>
              </div>
              <div
                aria-colindex="4"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-03"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  3
                </span>
              </div>
              <div
                aria-colindex="5"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-04"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  4
                </span>
              </div>
              <div
                aria-colindex="6"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-05"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  5
                </span>
              </div>
              <div
                aria-colindex="7"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-06"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  6
                </span>
              </div>
            </div>
            <div
              aria-rowindex="3"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-07"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  7
                </span>
              </div>
              <div
                aria-colindex="2"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-08"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  8
                </span>
              </div>
              <div
                aria-colindex="3"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-09"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  9
                </span>
              </div>
              <div
                aria-colindex="4"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-10"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  10
                </span>
              </div>
              <div
                aria-colindex="5"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-11"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  11
                </span>
              </div>
              <div
                aria-colindex="6"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-12"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  12
                </span>
              </div>
              <div
                aria-colindex="7"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-13"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  13
                </span>
              </div>
            </div>
            <div
              aria-rowindex="4"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-14"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  14
                </span>
              </div>
              <div
                aria-colindex="2"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-15"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  15
                </span>
              </div>
              <div
                aria-colindex="3"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-16"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  16
                </span>
              </div>
              <div
                aria-colindex="4"
                aria-label=""
                class="rdp-day rdp-focused"
                data-day="2020-06-17"
                data-focused="true"
                data-month="2020-06"
                role="gridcell"
                tabindex="0"
              >
                <span
                  class="rdp-day_date"
                >
                  17
                </span>
              </div>
              <div
                aria-colindex="5"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-18"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  18
                </span>
              </div>
              <div
                aria-colindex="6"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-19"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  19
                </span>
              </div>
              <div
                aria-colindex="7"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-20"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  20
                </span>
              </div>
            </div>
            <div
              aria-rowindex="5"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-21"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  21
                </span>
              </div>
              <div
                aria-colindex="2"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-22"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  22
                </span>
              </div>
              <div
                aria-colindex="3"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-23"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  23
                </span>
              </div>
              <div
                aria-colindex="4"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-24"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  24
                </span>
              </div>
              <div
                aria-colindex="5"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-25"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  25
                </span>
              </div>
              <div
                aria-colindex="6"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-26"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  26
                </span>
              </div>
              <div
                aria-colindex="7"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-27"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  27
                </span>
              </div>
            </div>
            <div
              aria-rowindex="6"
              class="rdp-week"
              role="row"
            >
              <div
                aria-colindex="1"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-28"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  28
                </span>
              </div>
              <div
                aria-colindex="2"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-29"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  29
                </span>
              </div>
              <div
                aria-colindex="3"
                aria-label=""
                class="rdp-day"
                data-day="2020-06-30"
                data-month="2020-06"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  30
                </span>
              </div>
              <div
                aria-colindex="4"
                aria-hidden="true"
                aria-label=""
                class="rdp-day rdp-hidden rdp-outside"
                data-day="2020-07-01"
                data-hidden="true"
                data-month="2020-07"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  1
                </span>
              </div>
              <div
                aria-colindex="5"
                aria-hidden="true"
                aria-label=""
                class="rdp-day rdp-hidden rdp-outside"
                data-day="2020-07-02"
                data-hidden="true"
                data-month="2020-07"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  2
                </span>
              </div>
              <div
                aria-colindex="6"
                aria-hidden="true"
                aria-label=""
                class="rdp-day rdp-hidden rdp-outside"
                data-day="2020-07-03"
                data-hidden="true"
                data-month="2020-07"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  3
                </span>
              </div>
              <div
                aria-colindex="7"
                aria-hidden="true"
                aria-label=""
                class="rdp-day rdp-hidden rdp-outside"
                data-day="2020-07-04"
                data-hidden="true"
                data-month="2020-07"
                role="gridcell"
                tabindex="-1"
              >
                <span
                  class="rdp-day_date"
                >
                  4
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rdp-footer"
    >
      <p>
        Please pick the first day.
      </p>
    </div>
  </div>
</div>
`;
